// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxAggregation render initial state with all props set 1`] = `
<AggregationBox
  headerAction={null}
  name="Test"
>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="prefix_bucket1"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket1
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        1
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="prefix_bucket2"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket2
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        2
      </UnclickableTag>
    </Col>
  </Row>
</AggregationBox>
`;

exports[`CheckboxAggregation render initial state with bucketHelp 1`] = `
<AggregationBox
  headerAction={null}
  name="Test"
>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="prefix_bucket1"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket1
         
        <HelpIconTooltip
          help={
            <React.Fragment>
              Published papers are believed to have undergone rigorous peer review.
               
              <ExternalLink
                as="a"
                href="https://inspirehep.net/info/faq/general#published"
              >
                Learn More
              </ExternalLink>
            </React.Fragment>
          }
        />
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        1
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="prefix_bucket2"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket2
         
        <HelpIconTooltip
          help={
            <React.Fragment>
              Published papers are believed to have undergone rigorous peer review.
               
            </React.Fragment>
          }
        />
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        2
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="prefix_bucket3"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket3
         
        <HelpIconTooltip
          help={
            <React.Fragment>
               
              <ExternalLink
                as="a"
                href="https://inspirehep.net/info/faq/general#published"
              >
                Learn More
              </ExternalLink>
            </React.Fragment>
          }
        />
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        3
      </UnclickableTag>
    </Col>
  </Row>
</AggregationBox>
`;

exports[`CheckboxAggregation render initial state without splitDisplayName 1`] = `
<AggregationBox
  headerAction={null}
  name="Test"
>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket1"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={true}
        onChange={[Function]}
      >
        bucket1
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        1
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket2"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket2
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        2
      </UnclickableTag>
    </Col>
  </Row>
</AggregationBox>
`;

exports[`CheckboxAggregation render more than 10 after show more clicked 1`] = `
<AggregationBox
  headerAction={null}
  name="Test"
>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket1"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={true}
        onChange={[Function]}
      >
        bucket1
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        1
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket2"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket2
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        2
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket3"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket3
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        3
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket4"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket4
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        4
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket5"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket5
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        2
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket6"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket6
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        2
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket7"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket7
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        2
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket8"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket8
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        2
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket9"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket9
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        2
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket10"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket10
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        2
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket11"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket11
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        2
      </UnclickableTag>
    </Col>
  </Row>
</AggregationBox>
`;

exports[`CheckboxAggregation renders with show more button if buckets are more than 10 1`] = `
<AggregationBox
  headerAction={null}
  name="Test"
>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket1"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={true}
        onChange={[Function]}
      >
        bucket1
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        1
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket2"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket2
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        2
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket3"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket3
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        3
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket4"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket4
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        4
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket5"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket5
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        2
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket6"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket6
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        2
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket7"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket7
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        2
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket8"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket8
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        2
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket9"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket9
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        2
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket10"
    type="flex"
  >
    <Col>
      <CheckboxItem
        checked={false}
        onChange={[Function]}
      >
        bucket10
      </CheckboxItem>
    </Col>
    <Col>
      <UnclickableTag>
        2
      </UnclickableTag>
    </Col>
  </Row>
  <SecondaryButton
    onClick={[Function]}
  >
    Show 
    1
     more
  </SecondaryButton>
</AggregationBox>
`;
